fix : updateSavedStoresPreferences 불변객체 clear 대신 새로할당으로 변경