@@ -109,10 +109,10 @@ public class PreferenceService {
 
         // 모든 저장된 가게의 선호도를 새로운 선호도로 업데이트
         for (SavedStore savedStore : savedStores) {
-            savedStore.getUserPreferences().clear();
-            savedStore.setUserPreferences(newPreferences.stream()
+            List<Long> preferenceIds = newPreferences.stream()
                     .map(PreferenceEntity::getId)
-                    .toList());
+                    .collect(Collectors.toList());
+            savedStore.setUserPreferences(preferenceIds);
         }
 
         // 변경된 가게 선호도 저장
